[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "care_facilities"
version = "0.1.0"
description = "Zipcode -> ranked elder-care facility table, orchestrated via LangGraph."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "langgraph",
    "langchain-core",
    "httpx",
    "pgeocode",
    "pandas",
    "fastapi",
    "uvicorn",
    "pydantic>=2",
    "python-dotenv",
    "slowapi",
    "redis",
]

[project.optional-dependencies]
dev = [
    "pytest",
]

[tool.hatch.build.targets.wheel]
packages = ["src/care_facilities"]
